# semcode

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  setup-hooks.sh  test_file1.c  test_file2.c  test_file3.c
docs/: branching-example.md  claude-patch-review.md  claude-semcode-setup.md  kernel-analysis.md  lore.md  lsp-server.md  schema.md  semcode-mcp.md
examples/: mcp-config.json
hooks/: pre-commit  pre-push
plugin/: README.md  marketplace.json
plugin/.claude-plugin/: marketplace.json
plugin/semcode/: .claudeignore  .mcp.json  README.md  TOOL_APPROVAL.md  approve-tools.sh  claude_plugin.json  install.sh
plugin/semcode/.claude-plugin/: plugin.json
plugin/semcode/mcp/: config.md  semcode.json
scripts/: claude-json.py  direct_download.py  nomic2vec.py  requirements.txt  semcode-lsp-wrapper.sh  test_lsp.py
src/: callchain.rs  clangd_analyzer.rs  clangd_processor.rs  clangd_worker.rs  database_utils.rs  date_utils.rs  diffdump.rs  display.rs  file_extensions.rs  git.rs  git_range.rs  hash.rs  indexer.rs  lib.rs  lore_writers.rs  pages.rs  perf_monitor.rs  pipeline.rs  search.rs  symbol_walkback.rs  text_utils.rs  treesitter_analyzer.rs  types.rs  vectorizer.rs  workdir.rs
src/database/: branches.rs  calls.rs  connection.rs  content.rs  functions.rs  git.rs  mod.rs  processed_files.rs  schema.rs  search.rs  symbol_filename.rs  types.rs  vectors.rs
tests/: clangd_integration_basic.rs  clangd_integration_compile_commands.rs  clangd_integration_database.rs  clangd_integration_enrichment.rs  clangd_multiprocess.rs  test_callchain.c  test_callchain.sh  test_header.h
tests/clangd_integration/: README.md  compile_commands_array.json  compile_commands_complex.json  compile_commands_gcc.json  compile_commands_macro_test.json  test_macro_usr.c  test_sample.c
tests/common/: mod.rs
